<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    
    android:id="@+id/scrollView1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
    
    
<RelativeLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/darkgrey"
    android:orientation="vertical" >
    
    
     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">
         
          <com.iangclifton.android.floatlabel.FloatLabel
            android:id="@+id/float_label_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:hint="@string/name"
             />
          
           <com.iangclifton.android.floatlabel.FloatLabel
            android:id="@+id/float_label_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/homeid"
             />
          
           <com.iangclifton.android.floatlabel.FloatLabel
            android:id="@+id/float_label_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password"/>
           
           <com.iangclifton.android.floatlabel.FloatLabel
            android:id="@+id/float_label_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/repeat_password"/>
           
           <com.iangclifton.android.floatlabel.FloatLabel
            android:id="@+id/float_label_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_id"
             />
           
           <com.iangclifton.android.floatlabel.FloatLabel
            android:id="@+id/float_label_6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_no"
             />
           
           </LinearLayout>

    

    
     <com.dd.processbutton.iml.ActionProcessButton
            android:id="@+id/btnSignUp"
            android:layout_width="180dp"
       	 	android:layout_height="wrap_content"
       		android:layout_centerHorizontal="true"
       		 android:layout_marginTop="450dp"
        	android:text="@string/signup"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            custom:pb_colorComplete="#e81e61"
            custom:pb_colorNormal="#e81e61"
            custom:pb_colorPressed="#e81e61"
            custom:pb_colorProgress="#e81e61"
            custom:pb_textComplete="Success"
            custom:pb_textProgress="Signing Up"
            android:gravity="center_horizontal" 
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"/>

</RelativeLayout>

</ScrollView>