<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/darkgrey"
     >
    
    
    

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp"
        android:text="@string/appliance_add"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold" />

    <com.iangclifton.android.floatlabel.FloatLabel
        android:id="@+id/appName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:hint="@string/appliance_name" >
    </com.iangclifton.android.floatlabel.FloatLabel>

   
    <com.dd.processbutton.iml.ActionProcessButton
            android:id="@+id/btnAdd"
            android:layout_width="180dp"
       	 	android:layout_height="wrap_content"
       		android:layout_below="@+id/appName"
        	android:layout_centerHorizontal="true"
           	android:text="@string/add"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            custom:pb_colorComplete="#e81e61"
            custom:pb_colorNormal="#e81e61"
            custom:pb_colorPressed="#e81e61"
            custom:pb_colorProgress="#e81e61"
            custom:pb_textComplete="Success"
            custom:pb_textProgress="Adding"
            android:gravity="center_horizontal" 
            android:layout_gravity="center_horizontal"/>

</RelativeLayout>